--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "skrollr": "^0.6.26"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts start",
-    "start": "npm-run-all build-css build-js",
+    "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
